--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Orientation Course</title>
-    <link rel="stylesheet" href="css/jobcenter.css" type="text/css">
+    <link rel="stylesheet" href="css/Jobcenter.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
